Updated navbar. Updated portfolio page. Added email on Contact page.

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>Gerriss Gailey Portfolio</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,20 +14,25 @@
 
 <body>
   <!-- Navigation Bar -->
-  <nav class="navbar bg-dark">
-    <a class="navbar-brand text-white" href="index.html">Gerriss Gailey
-    </a>
-    <ul class="nav nav-tabs justify-content-end">
-      <li class="nav-item">
-        <a class="nav-link text-white" href="index.html">About Me</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="portfolio.html">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active text-black" href="contact.html">Contact</a>
-      </li>
-    </ul>
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <a class="navbar-brand text-white" href="index.html">Gerriss Gailey</a>
+    <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+      <ul class="nav nav-tabs justify-content-end mt-2 mt-lg-0">
+        <li class="nav-item">
+          <a class="nav-link text-white" href="index.html">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active text-black" href="contact.html">Contact <span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+    </div>
   </nav>
   <br>
   <br>
@@ -39,6 +44,7 @@
         <div class="row">
           <div class="col-sm my-3">
             <h1>Contact</h1>
+            <p class="lead">I can be reached by email at <a class="text-white mx-auto" href="mailto: gerrissgailey@gmail.com" target="_blank">gerrissgailey@gmail.com</a> or by filling out the contact form below.</p>
           </div>
         </div>
         <div class="row">
@@ -61,7 +67,7 @@
                   placeholder="Enter Your Message Here"></textarea>
               </div>
               <!-- Submit form button -->
-              <div class="col-auto my-3">
+              <div class="my-3">
                 <button type="submit" class="btn btn-dark">Submit</button>
               </div>
             </form>
@@ -75,14 +81,20 @@
   <footer class="row m-auto py-5">
     <div class="col-sm d-flex justify-content-center">
       <a href="https://www.instagram.com/gerrissggailey/" target="_blank" rel="noopener noreferrer"> <img
-          src="images/instagram.svg" alt="Gerriss Instagram" width="30" height="30">
-      </a>
-      <a href="https://www.facebook.com/gerrissgailey/" target="_blank" rel="noopener noreferrer"> <img
-          src="images/facebook.svg" alt="Gerriss Instagram" width="30" height="30" class="mx-4">
-      </a>
-      <a href="https://twitter.com/GerrissGailey" target="_blank" rel="noopener noreferrer"> <img
-          src="images/twitter.svg" alt="Gerriss Instagram" width="30" height="30">
-      </a>
+        src="assets/instagram.svg" alt="Gerriss Instagram" width="30" height="30" class="mx-2">
+    </a>
+    <a href="https://www.facebook.com/gerrissgailey/" target="_blank" rel="noopener noreferrer"> <img
+        src="assets/facebook.svg" alt="Gerriss Facebook" width="30" height="30" class="mx-2">
+    </a>
+    <a href="https://twitter.com/GerrissGailey" target="_blank" rel="noopener noreferrer"> <img
+        src="assets/twitter.svg" alt="Gerriss Twitter" width="30" height="30" class="mx-2">
+    </a>
+    <a href="https://github.com/gerrissgailey" target="_blank" rel="noopener noreferrer"> <img
+        src="assets/github.svg" alt="Gerriss GitHub" width="30" height="30" class="mx-2">
+    </a>
+    <a href="https://www.linkedin.com/in/gerriss-gailey-16aab026/" target="_blank" rel="noopener noreferrer"> <img
+        src="assets/linkedin.svg" alt="Gerriss LinkedIn" width="30" height="30" class="mx-2">
+    </a>
     </div>
   </footer>
 
