--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Gerriss' Portfolio</title>
+    <title>Gerriss Gailey Portfolio</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,23 +21,28 @@
 
 <body>
     <!-- Navigation bar -->
-    <nav class="navbar bg-dark">
-        <a class="navbar-brand text-white" href="index.html">Gerriss Gailey
-        </a>
-        <ul class="nav nav-tabs justify-content-end">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <a class="navbar-brand text-white" href="index.html">Gerriss Gailey</a>
+        <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+          <ul class="nav nav-tabs justify-content-end mt-2 mt-lg-0">
             <li class="nav-item">
-                <a class="nav-link active text-black" href="index.html">About Me</a>
+              <a class="nav-link active text-black" href="index.html">About Me <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="portfolio.html">Portfolio</a>
+              <a class="nav-link text-white" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="contact.html">Contact</a>
+              <a class="nav-link text-white" href="contact.html">Contact</a>
             </li>
-        </ul>
-    </nav>
-    <br>
-    <br>
+          </ul>
+        </div>
+      </nav>
+      <br>
+      <br>
 
     <!-- About Me section -->
     <section class="container bg-info card">
@@ -49,15 +54,15 @@
         <div class="row">
             <!-- Personal photo -->
             <div class="col-md-3">
-                <img src="images/gerriss.jpg" alt="Gerriss Gailey" class="img-fluid mb-4">
+                <img src="assets/gerriss.jpg" alt="Gerriss Gailey" class="img-fluid mb-4">
             </div>
             <!-- Bio details -->
             <div class="col-md-9">
-                <p class="line height: 3px;">I'm Gerriss. I grew up in West Jordan, UT but honestly can't stand the Salt
-                    Lake Valley so I relocated to St. George, UT in 2010. I've been married to my beautiful wife for 15
-                    years and have two beautiful little girls. I enjoy tech, CAD design, 3D printing, trading in the
-                    foreign currency markets, camping, and spending time with the family. Oh, and most things should be
-                    finished off with a quality beer or a glass of whiskey...</p>
+                <p class="line height: 3px">I'm Gerriss. I grew up in West Jordan, UT but honestly can't stand the Salt
+                    Lake Valley so I relocated to St. George, UT in 2010. I've been married to my beautiful wife for 16
+                    years and have two beautiful little girls. I enjoy tech, CAD design, 3D printing, trading the
+                    foreign currency markets, camping, and spending time with the family.</p>
+                <p class="line height: 3px">I have a diverse career background having worked in various fields from foreign currency markets, underground utility locating services, CNC machining, pastoral/clergy, to my current field in CAD drafting/mechanical design/3D printing for the last 5 years. I find thorough enjoyment in just about all things "tech" which in part has made me interested to add full stack web development to my skillset.</p>
             </div>
         </div>
     </section>
@@ -66,13 +71,19 @@
     <footer class="row m-auto py-5">
         <div class="col-sm d-flex justify-content-center">
             <a href="https://www.instagram.com/gerrissggailey/" target="_blank" rel="noopener noreferrer"> <img
-                    src="images/instagram.svg" alt="Gerriss Instagram" width="30" height="30">
+                src="assets/instagram.svg" alt="Gerriss Instagram" width="30" height="30" class="mx-2">
             </a>
             <a href="https://www.facebook.com/gerrissgailey/" target="_blank" rel="noopener noreferrer"> <img
-                    src="images/facebook.svg" alt="Gerriss Instagram" width="30" height="30" class="mx-4">
+                src="assets/facebook.svg" alt="Gerriss Facebook" width="30" height="30" class="mx-2">
             </a>
             <a href="https://twitter.com/GerrissGailey" target="_blank" rel="noopener noreferrer"> <img
-                    src="images/twitter.svg" alt="Gerriss Instagram" width="30" height="30">
+                src="assets/twitter.svg" alt="Gerriss Twitter" width="30" height="30" class="mx-2">
+            </a>
+            <a href="https://github.com/gerrissgailey" target="_blank" rel="noopener noreferrer"> <img
+                src="assets/github.svg" alt="Gerriss GitHub" width="30" height="30" class="mx-2">
+            </a>
+            <a href="https://www.linkedin.com/in/gerriss-gailey-16aab026/" target="_blank" rel="noopener noreferrer"> <img
+                src="assets/linkedin.svg" alt="Gerriss LinkedIn" width="30" height="30" class="mx-2">
             </a>
         </div>
     </footer>
