--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>Gerriss Gailey Portfolio</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,20 +14,25 @@
 
 <body>
   <!-- Navigation Bar   -->
-  <nav class="navbar bg-dark">
-    <a class="navbar-brand text-white" href="index.html">Gerriss Gailey
-    </a>
-    <ul class="nav nav-tabs justify-content-end">
-      <li class="nav-item">
-        <a class="nav-link text-white" href="index.html">About Me</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active text-black" href="portfolio.html">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="contact.html">Contact</a>
-      </li>
-    </ul>
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <a class="navbar-brand text-white" href="index.html">Gerriss Gailey</a>
+    <button class="navbar-toggler bg-white" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+      <ul class="nav nav-tabs justify-content-end mt-2 mt-lg-0">
+        <li class="nav-item">
+          <a class="nav-link text-white" href="index.html">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active text-black" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
   </nav>
   <br>
   <br>
@@ -41,45 +46,50 @@
     </div>
     <!-- Portfolio image cards -->
     <div class="row">
-      <div class="card-group px-4">
+      <div class="card-deck px-4">
         <div class="card">
-          <img src="images/IMG_3010.jpg" class="card-img-top" alt="Ocean Pic 1">
-          <div class="card-body">
-            <h5 class="card-title">Morning Closeup</h5>
+          <img src="assets/demo/dine-decider-preview.gif" class="card-img-top" alt="Decider Diner">
+          <div class="card-body text-center">
+            <a href="https://gerrissgailey.github.io/Dine-Decider/" target="_blank" class="btn btn-secondary btn-block btn-lg" style="border-radius: 5px;">Decider Diner</a>
+            <p class="card-text">Trying to figure out what to eat tonight? Decider Diner can help with that! (tip not included)</p>
+            <a class="text-primary link-text" href="https://github.com/gerrissgailey/Dine-Decider" target="_blank" style="font-size: 16px;">GitHub Repo</a>
           </div>
         </div>
         <div class="card">
-          <img src="images/IMG_3013.jpg" class="card-img-top" alt="Ocean Pic 2">
-          <div class="card-body">
-            <h5 class="card-title">Rich Ocean Sunrise</h5>
+          <img src="assets/demo/weather-dash-preview.gif" class="card-img-top" alt="Weather Dashboard">
+          <div class="card-body text-center">
+            <a href="https://gerrissgailey.github.io/weather-dashboard/" target="_blank" class="btn btn-secondary btn-block btn-lg" style="border-radius: 5px;">Weather Dashboard</a>
+            <p class="card-text">What will the weather be today? Yes, there are hundreds of weather apps, but it's fun to create your own.</p>
+            <a class="text-primary link-text" href="https://github.com/gerrissgailey/weather-dashboard" target="_blank" style="font-size: 16px;">GitHub Repo</a>
           </div>
         </div>
-        <div class="card">
-          <img src="images/IMG_3016.jpg" class="card-img-top" alt="Ocean Pic 3">
-          <div class="card-body">
-            <h5 class="card-title">Leisurely Morning Stroll</h5>
-          </div>
-        </div>
+        
       </div>
     </div>
     <div class="row">
-      <div class="card-group p-4">
+      <div class="card-deck p-4">
         <div class="card">
-          <img src="images/IMG_3018.jpg" class="card-img-top" alt="Ocean Pic 4">
-          <div class="card-body">
-            <h5 class="card-title">Beautiful Blues</h5>
+          <img src="assets/demo/scheduler-preview.gif" class="card-img-top" alt="Work Day Scheduler">
+          <div class="card-body text-center">
+            <a href="https://gerrissgailey.github.io/the-work-day-scheduler/" target="_blank" class="btn btn-secondary btn-block btn-lg" style="border-radius: 5px;">Work Day Scheduler</a>
+            <p class="card-text">If you're anything like me, you might forget to get dressed unless you write it down... Kidding! But this app may help with planning a work day schedule.</p>
+            <a class="text-primary link-text" href="https://github.com/gerrissgailey/the-work-day-scheduler" target="_blank" style="font-size: 16px;">GitHub Repo</a>
           </div>
         </div>
         <div class="card">
-          <img src="images/IMG_3023.jpg" class="card-img-top" alt="Ocean Pic 5">
-          <div class="card-body">
-            <h5 class="card-title">Mid-Day Shot</h5>
+          <img src="assets/demo/js-quiz-preview.gif" class="card-img-top" alt="JavaScript Quiz">
+          <div class="card-body text-center">
+            <a href="https://gerrissgailey.github.io/javascript-quiz/" target="_blank" class="btn btn-secondary btn-block btn-lg" style="border-radius: 5px;">JavaScript Quiz</a>
+            <p class="card-text">We all like taking tests, right? A short and simple quiz app designed for testing one's understanding of JavaScript.</p>
+            <a class="text-primary link-text" href="https://github.com/gerrissgailey/javascript-quiz" target="_blank" style="font-size: 16px;">GitHub Repo</a>
           </div>
         </div>
         <div class="card">
-          <img src="images/IMG_3035.jpg" class="card-img-top" alt="Ocean Pic 6">
-          <div class="card-body">
-            <h5 class="card-title">Beach Time</h5>
+          <img src="assets/demo/pass-gen-preview.gif" class="card-img-top" alt="Password Generator">
+          <div class="card-body text-center">
+            <a href="https://gerrissgailey.github.io/password-generator/" target="_blank" class="btn btn-secondary btn-block btn-lg" style="border-radius: 5px;">Password Generator</a>
+            <p class="card-text">Random Password Generators... Because lets face it. You don't already have a hard enough time remembering the passwords you come up with on your own.</p>
+            <a class="text-primary link-text" href="https://github.com/gerrissgailey/password-generator" target="_blank" style="font-size: 16px;">GitHub Repo</a>
           </div>
         </div>
       </div>
@@ -90,13 +100,19 @@
   <footer class="row m-auto py-5">
     <div class="col-sm d-flex justify-content-center">
       <a href="https://www.instagram.com/gerrissggailey/" target="_blank" rel="noopener noreferrer"> <img
-          src="images/instagram.svg" alt="Gerriss Instagram" width="30" height="30">
+          src="assets/instagram.svg" alt="Gerriss Instagram" width="30" height="30" class="mx-2">
       </a>
       <a href="https://www.facebook.com/gerrissgailey/" target="_blank" rel="noopener noreferrer"> <img
-          src="images/facebook.svg" alt="Gerriss Instagram" width="30" height="30" class="mx-4">
+          src="assets/facebook.svg" alt="Gerriss Facebook" width="30" height="30" class="mx-2">
       </a>
       <a href="https://twitter.com/GerrissGailey" target="_blank" rel="noopener noreferrer"> <img
-          src="images/twitter.svg" alt="Gerriss Instagram" width="30" height="30">
+          src="assets/twitter.svg" alt="Gerriss Twitter" width="30" height="30" class="mx-2">
+      </a>
+      <a href="https://github.com/gerrissgailey" target="_blank" rel="noopener noreferrer"> <img
+          src="assets/github.svg" alt="Gerriss GitHub" width="30" height="30" class="mx-2">
+      </a>
+      <a href="https://www.linkedin.com/in/gerriss-gailey-16aab026/" target="_blank" rel="noopener noreferrer"> <img
+          src="assets/linkedin.svg" alt="Gerriss LinkedIn" width="30" height="30" class="mx-2">
       </a>
     </div>
   </footer>
