Added resume page with resume PDF. Changed layout of Contact page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,9 @@
           <a class="nav-link active text-black" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link text-white" href="resume.html">Resume</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-white" href="contact.html">Contact</a>
         </li>
       </ul>
@@ -99,6 +102,12 @@
   <!-- Footer - Social Media -->
   <footer class="row m-auto py-5">
     <div class="col-sm d-flex justify-content-center">
+      <a href="https://github.com/gerrissgailey" target="_blank" rel="noopener noreferrer"> <img
+        src="assets/github.svg" alt="Gerriss GitHub" width="30" height="30" class="mx-2">
+      </a>
+      <a href="https://www.linkedin.com/in/gerriss-gailey-16aab026/" target="_blank" rel="noopener noreferrer"> <img
+        src="assets/linkedin.svg" alt="Gerriss LinkedIn" width="30" height="30" class="mx-2">
+      </a>
       <a href="https://www.instagram.com/gerrissggailey/" target="_blank" rel="noopener noreferrer"> <img
           src="assets/instagram.svg" alt="Gerriss Instagram" width="30" height="30" class="mx-2">
       </a>
@@ -107,12 +116,6 @@
       </a>
       <a href="https://twitter.com/GerrissGailey" target="_blank" rel="noopener noreferrer"> <img
           src="assets/twitter.svg" alt="Gerriss Twitter" width="30" height="30" class="mx-2">
-      </a>
-      <a href="https://github.com/gerrissgailey" target="_blank" rel="noopener noreferrer"> <img
-          src="assets/github.svg" alt="Gerriss GitHub" width="30" height="30" class="mx-2">
-      </a>
-      <a href="https://www.linkedin.com/in/gerriss-gailey-16aab026/" target="_blank" rel="noopener noreferrer"> <img
-          src="assets/linkedin.svg" alt="Gerriss LinkedIn" width="30" height="30" class="mx-2">
       </a>
     </div>
   </footer>
