--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,9 @@
           <a class="nav-link text-white" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link text-white" href="resume.html">Resume</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link active text-black" href="contact.html">Contact <span class="sr-only">(current)</span></a>
         </li>
       </ul>
@@ -38,63 +41,65 @@
   <br>
 
   <!-- Start Contact Form -->
-  <div class="row m-auto">
-    <div class="col-sm-6">
-      <section class="container bg-info card">
-        <div class="row">
-          <div class="col-sm my-3">
-            <h1>Contact</h1>
-            <p class="lead">I can be reached by email at <a class="text-white mx-auto" href="mailto: gerrissgailey@gmail.com" target="_blank">gerrissgailey@gmail.com</a> or by filling out the contact form below.</p>
+  <section class="container bg-info card">
+    <div class="row">
+      <div class="col-sm-6">
+        <!-- <section class="container bg-info card"> -->
+          <div class="row">
+            <div class="col-sm my-3">
+              <h1>Contact</h1>
+              <p class="lead">I can be reached by email at <a class="text-white mx-auto" href="mailto: gerrissgailey@gmail.com" target="_blank">gerrissgailey@gmail.com</a> or by filling out the contact form below.</p>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-sm">
-            <form>
-              <!-- Name entry box -->
-              <div class="form-group">
-                <label for="formGroupExampleInput">Name</label>
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
-              </div>
-              <!-- Email entry box -->
-              <div class="form-group">
-                <label for="formGroupExampleInput2">Email</label>
-                <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Email">
-              </div>
-              <!-- Message entry box -->
-              <div class="form-group">
-                <label for="exampleFormControlTextarea1">Message</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                  placeholder="Enter Your Message Here"></textarea>
-              </div>
-              <!-- Submit form button -->
-              <div class="my-3">
-                <button type="submit" class="btn btn-dark">Submit</button>
-              </div>
-            </form>
+          <div class="row">
+            <div class="col-sm">
+              <form>
+                <!-- Name entry box -->
+                <div class="form-group">
+                  <label for="formGroupExampleInput">Name</label>
+                  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
+                </div>
+                <!-- Email entry box -->
+                <div class="form-group">
+                  <label for="formGroupExampleInput2">Email</label>
+                  <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Email">
+                </div>
+                <!-- Message entry box -->
+                <div class="form-group">
+                  <label for="exampleFormControlTextarea1">Message</label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                    placeholder="Enter Your Message Here"></textarea>
+                </div>
+                <!-- Submit form button -->
+                <div class="my-3">
+                  <button type="submit" class="btn btn-dark">Submit</button>
+                </div>
+              </form>
+            </div>
           </div>
-        </div>
-      </section>
+        <!-- </section> -->
+      </div>
     </div>
-  </div>
+  </section>
 
   <!-- Footer - Social Media -->
   <footer class="row m-auto py-5">
     <div class="col-sm d-flex justify-content-center">
+      <a href="https://github.com/gerrissgailey" target="_blank" rel="noopener noreferrer"> <img
+        src="assets/github.svg" alt="Gerriss GitHub" width="30" height="30" class="mx-2">
+      </a>
+      <a href="https://www.linkedin.com/in/gerriss-gailey-16aab026/" target="_blank" rel="noopener noreferrer"> <img
+        src="assets/linkedin.svg" alt="Gerriss LinkedIn" width="30" height="30" class="mx-2">
+      </a>
       <a href="https://www.instagram.com/gerrissggailey/" target="_blank" rel="noopener noreferrer"> <img
         src="assets/instagram.svg" alt="Gerriss Instagram" width="30" height="30" class="mx-2">
-    </a>
-    <a href="https://www.facebook.com/gerrissgailey/" target="_blank" rel="noopener noreferrer"> <img
+      </a>
+      <a href="https://www.facebook.com/gerrissgailey/" target="_blank" rel="noopener noreferrer"> <img
         src="assets/facebook.svg" alt="Gerriss Facebook" width="30" height="30" class="mx-2">
-    </a>
-    <a href="https://twitter.com/GerrissGailey" target="_blank" rel="noopener noreferrer"> <img
+      </a>
+      <a href="https://twitter.com/GerrissGailey" target="_blank" rel="noopener noreferrer"> <img
         src="assets/twitter.svg" alt="Gerriss Twitter" width="30" height="30" class="mx-2">
-    </a>
-    <a href="https://github.com/gerrissgailey" target="_blank" rel="noopener noreferrer"> <img
-        src="assets/github.svg" alt="Gerriss GitHub" width="30" height="30" class="mx-2">
-    </a>
-    <a href="https://www.linkedin.com/in/gerriss-gailey-16aab026/" target="_blank" rel="noopener noreferrer"> <img
-        src="assets/linkedin.svg" alt="Gerriss LinkedIn" width="30" height="30" class="mx-2">
-    </a>
+      </a>
     </div>
   </footer>
 
