--- a/resume.html
+++ b/resume.html
@@ -30,13 +30,13 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
           <ul class="nav nav-tabs justify-content-end mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link active text-black" href="index.html">About Me <span class="sr-only">(current)</span></a>
+              <a class="nav-link text-white" href="index.html">About Me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="resume.html">Resume</a>
+              <a class="nav-link active text-black" href="resume.html">Resume <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="contact.html">Contact</a>
@@ -47,23 +47,17 @@
       <br>
       <br>
 
-    <!-- About Me section -->
+    <!-- Resume section -->
     <section class="container bg-info card">
         <div class="row">
             <div class="col-sm-6 my-3">
-                <h1>About Me</h1>
+                <h1>Resume</h1>
             </div>
         </div>
         <div class="row">
-            <!-- Personal photo -->
-            <div class="col-md-3">
-                <img src="assets/gerriss.jpg" alt="Gerriss Gailey" class="img-fluid mb-4">
-            </div>
-            <!-- Bio details -->
-            <div class="col-md-9">
-                <p class="line height: 3px">I'm Gerriss. I grew up in West Jordan, UT but honestly can't stand the Salt Lake Valley so I relocated to St. George, UT in 2010. I've been married to my beautiful wife for 16 years and have two beautiful little girls. I enjoy tech, CAD design, 3D printing, trading the foreign currency markets, camping, and spending time with the family.</p>
-                <p class="line height: 3px">I have a diverse career background having worked in various fields from foreign currency markets, underground utility locating services, CNC machining, pastoral/clergy, to my current field in CAD drafting/mechanical design/3D printing for the last 5 years. I find thorough enjoyment in just about all things "tech" which in part has made me interested to add full stack web development to my skillset.</p>
-            </div>
+            <!-- Embedded Resume -->
+            <iframe src="assets/docs/gerriss-gailey-resume.pdf" width="100%" height="1125px">
+            </iframe>
         </div>
     </section>
 
