Updated profile with new portfolio items and updated resume.

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,11 +51,38 @@
     <div class="row">
       <div class="card-deck px-4">
         <div class="card">
+          <img src="assets/demo/middle-earth-supplier-preview.gif" class="card-img-top" alt="Middle-Earth Supplier">
+          <div class="card-body text-center">
+            <a href="https://middleearthsupplier.herokuapp.com/" target="_blank" class="btn btn-secondary btn-block btn-lg" style="border-radius: 5px;">Middle-Earth Supplier</a>
+            <p class="card-text">For when you're travelling through Middle-Earth and you find yourself in need of supplies. Or a nice Ale... Yes, they come in pints!</p>
+            <a class="text-primary link-text" href="https://github.com/gerrissgailey/MiddleEarthSupplier" target="_blank" style="font-size: 16px;">GitHub Repo</a>
+          </div>
+        </div>
+        <div class="card">
           <img src="assets/demo/dine-decider-preview.gif" class="card-img-top" alt="Decider Diner">
           <div class="card-body text-center">
             <a href="https://gerrissgailey.github.io/Dine-Decider/" target="_blank" class="btn btn-secondary btn-block btn-lg" style="border-radius: 5px;">Decider Diner</a>
             <p class="card-text">Trying to figure out what to eat tonight? Decider Diner can help with that! (tip not included)</p>
             <a class="text-primary link-text" href="https://github.com/gerrissgailey/Dine-Decider" target="_blank" style="font-size: 16px;">GitHub Repo</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="card-deck p-4">
+        <div class="card">
+          <img src="assets/demo/eat-da-burger-preview.gif" class="card-img-top" alt="Eat-Da-Burger">
+          <div class="card-body text-center">
+            <a href="https://calm-mesa-07477.herokuapp.com/" target="_blank" class="btn btn-secondary btn-block btn-lg" style="border-radius: 5px;">Eat-Da-Burger</a>
+            <p class="card-text">When you feel like stuffing your face with burgers... Virtually...</p>
+            <a class="text-primary link-text" href="https://github.com/gerrissgailey/eat-da-burger" target="_blank" style="font-size: 16px;">GitHub Repo</a>
+          </div>
+        </div>
+        <div class="card">
+          <img src="assets/demo/employee-tracker-preview.gif" class="card-img-top" alt="Employee Tracker">
+          <div class="card-body text-center">
+            <a href="https://github.com/gerrissgailey/employee-tracker" target="_blank" class="btn btn-secondary btn-block btn-lg" style="border-radius: 5px;">Employee Tracker - on GitHub</a>
+            <p class="card-text">A way to keep track of your workplace departments, roles, and employees. It doesn't do the firing part though. You still have to do that part.</p>
           </div>
         </div>
         <div class="card">
@@ -66,7 +93,6 @@
             <a class="text-primary link-text" href="https://github.com/gerrissgailey/weather-dashboard" target="_blank" style="font-size: 16px;">GitHub Repo</a>
           </div>
         </div>
-        
       </div>
     </div>
     <div class="row">
